# breakout

./: CMakeLists.txt
.cache/clangd/index/: main.cpp.63FD13B7B1D9E4AD.idx
include/: elements.hpp  engine.hpp  globals.hpp  input.hpp  window.hpp
src/: elements.cpp  engine.cpp  input.cpp  main.cpp  window.cpp
